# identity-server-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
docker/: Dockerfile
keystore/: internal-devel.crt  internal-devel.key
src/: database.rs  domain.rs  dto.rs  errors.rs  handlers.rs  main.rs  setup.rs
src/identity/: auth_token.rs  authorization.rs  mod.rs  service.rs
